--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>HR Project<br><a href="https://drive.google.com/drive/folders/1x7gTe8wgZ7JgkIS4DOaxo0I6r9x2FNUd?usp=sharing">PROJECT NAME 1</a></p>
+								<p>Happiness Factor<br><a href="https://drive.google.com/drive/folders/1x7gTe8wgZ7JgkIS4DOaxo0I6r9x2FNUd?usp=sharing">Alcohol to Happiness</a></p>
 								<p>Fuel Economy<br><a href="putlinkhere">PROJECT NAME 2</a></p>
 								<p>Hotel Invoice<br><a href="putlinkhere">PROJECT NAME 3</a></p>
 							</article>
