--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/Sky1.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Sky1.png" alt="" /></span>
 								<p>Happiness Factor<br><a href="https://drive.google.com/drive/folders/1x7gTe8wgZ7JgkIS4DOaxo0I6r9x2FNUd?usp=sharing">Alcohol to Happiness</a></p>
 								<p>Fuel Economy<br><a href="putlinkhere">PROJECT NAME 2</a></p>
 								<p>Hotel Invoice<br><a href="putlinkhere">PROJECT NAME 3</a></p>
